# mfai-db-repos

./: .env.example  .gitignore  CLAUDE.local.mde  CLAUDE.md  IMPORT_UPDATE_SUMMARY.md  README.md  SWITCH_DB.txt  docker-compose.yml  fix_indentation.sh  fix_indentation2.sh  mfai-db-repos-config.example.json  package-lock.json  pyproject.toml  requirements.txt  setup.cfg  test_single_file_update.py
chatai/: .env.example  .gitignore  CLAUDE.md  README.md  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
docs/: architecture-python.md  checkpoints.md  compact.md  database-guide.md  debug-search-analysis.md  full-stack-ai-ecosystem-architecture.md  google_genai_python.txt  insights.md  mcp-typescript-client-roadmap.md  mcp_full_text_llm.md  mcp_server_implementation_checkpoint.md  mcp_sse_roadmap.md  mcp_tool_roadmap_update.md  mcp_typescript.md  mfai_intelligent_response_roadmap.md  mfai_mcp_server_reposel_roadmap.md  modflow_ai_mcp_server_tools.md  openai_python.txt  python-roadmap.md  remote_mcp_cloudflare.md  repo_navigator.md  single-file-update.md  testing-strategy-current-stack.md  vector-search-implementation.md
mfai-mcp-cursor-wrapper/: LICENSE  README.md  index.js  package.json
mfai_db_repos/: __init__.py
mfai_mcp_server/: .gitignore  README.md  package-lock.json  package.json
mfai_mcp_server_cloudflare/: .dev.vars.example  .gitignore  README.md  cursor-mcp-wrapper.js  manage-keys.js  package-lock.json  package.json  proxy.js  test-local.js  test-prod.js  test-sse-local.js  test-sse-prod.js  tsconfig.json  wrangler.toml
tests/: conftest.py  (+3 more)
(+194 files in other folders)
